Fix issue #68 - Avoid widget title wrapping

--- a/assets/stylesheets/application.styl
+++ b/assets/stylesheets/application.styl
@@ -140,6 +140,9 @@ body
             text-transform uppercase
             color widgetheader
             line-height 90%
+            overflow: hidden
+            text-overflow: ellipsis
+            white-space: nowrap
 
 big
      color #fff
